deployment-new/lewbank2.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lewbank2-deployment
  labels:
    app: lewbank2
    version: v1
    role: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lewbank2
  template:
    metadata:
      labels:
        app: lewbank2
    spec:
      volumes:
        - name: lewbank2-storage
          persistentVolumeClaim:
            claimName: lewbank2-volume-claim
      containers:
        - name: sheet-fsp
          image: ldaly/sheet-fsp:0.1.6
          ports:
            - containerPort: 4102
          command:
            - sh
            - -c
            - npm run start

        - name: scheme-adapter
          image: ldaly/sdk-scheme-adapter:0.1.6
          ports:
            - containerPort: 4000
            - containerPort: 4001
          command:
            - sh
            - -c
            - npm run start

        - name: redis
          image: redis:5.0.4-alpine
          ports:
            - containerPort: 6379

        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: lewbank2-storage
