deployment-new/lewbank1.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lewbank1-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:

  # Talk to the dfsp api
  - host: test-dfsp-lewbank1.moja-box.vessels.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: lewbank1-service
          servicePort: 4002

  # So the switch can talk to the scheme-adapter        
  - host: test-inbound-lewbank1.moja-box.vessels.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: lewbank1-service
          servicePort: 4000

  # For the dfsp to talk to the scheme-adapter
  - host: test-outbound-lewbank1.moja-box.vessels.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: lewbank1-service
          servicePort: 4001
